# maplibre-native-godot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md  export_presets.cfg  maplibre_native_godot.gdextension  project.godot
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release.yml  test.yml
.godot/: extension_list.cfg
addons/maplibre_native_godot/: maplibre_native_godot.gdextension
addons/maplibre_native_godot/demo/: demo.tscn  map_window.gd
docs/ADR/: 0001-build-pipeline.md  0002-continuous-render-mode.md  0003-positioning-cpu-copy-integration.md  0004-projection-helpers.md  0005-idle-redraw-throttling.md
docs/build-guide/: Windows_11.md
docs/ci/: Windows_CI.md
godot/scenes/: demo.tscn
godot/scripts/: map_window.gd
scripts/: build_all_linux.sh  build_all_windows.bat  build_extension_linux.sh  build_extension_macos.sh  build_extension_windows.bat  build_extension_windows_reuse_slint.bat  build_maplibre_native_linux.sh  build_maplibre_native_macos.sh  build_maplibre_native_windows.bat  package_release.sh  run_godot.bat  run_godot.sh  run_godot_macos.sh  verify_release_package.py
scripts/linux/: build_all.sh  build_extension.sh  build_maplibre_native.sh  run_godot.sh
scripts/macos/: build_all.sh  build_extension.sh  build_maplibre_native.sh  run_godot.sh
scripts/windows/: build_all.bat  build_extension.bat  build_extension_reuse_slint.bat  build_maplibre_native.bat  run_godot.bat
src/: animation.hpp  map_runtime.cpp  map_runtime.hpp  map_view_node.cpp  map_view_node.hpp  register_types.cpp
tests/: CMakeLists.txt  test_animation.cpp  test_release_validation.py
